--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 body {
   background: #fff;
   color: #666666;
@@ -9,17 +7,18 @@ body {
 a {
   color: #2dc997;
 }
+
 .exlo {
   position: absolute;
   top: .5vw;
   left: 90vw;
 }
 
-#left_event{
+#left_event {
   width: 40vw;
-} 
+}
 
-#right_event{
+#right_event {
   width: 40vw;
 }
 
@@ -32,7 +31,7 @@ a {
 
   #exl {
     left: 40vw;
-    top:2vw;
+    top: 2vw;
   }
 
   /* #event_div {
@@ -55,6 +54,7 @@ a {
 
 
 }
+
 a:hover,
 a:active,
 a:focus {
@@ -225,7 +225,7 @@ h6 {
 
 #hero h2 {
   color: #eee;
-  
+
   font-size: 24px;
 }
 
@@ -275,12 +275,12 @@ h6 {
   white-space: nowrap;
 }
 
-.nav-menu > li {
+.nav-menu>li {
   float: left;
 }
 
-.nav-menu li:hover > ul,
-.nav-menu li.sfHover > ul {
+.nav-menu li:hover>ul,
+.nav-menu li.sfHover>ul {
   display: block;
 }
 
@@ -333,11 +333,11 @@ h6 {
   outline: none;
 }
 
-.nav-menu > li {
+.nav-menu>li {
   margin-left: 10px;
 }
 
-.nav-menu > li > a:before {
+.nav-menu>li>a:before {
   content: "";
   position: absolute;
   width: 100%;
@@ -352,8 +352,8 @@ h6 {
 }
 
 .nav-menu a:hover:before,
-.nav-menu li:hover > a:before,
-.nav-menu .menu-active > a:before {
+.nav-menu li:hover>a:before,
+.nav-menu .menu-active>a:before {
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
@@ -527,6 +527,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: #fff;
   padding: 80px 0;
 }
+
 .cont {
   font-weight: 400;
   margin-top: 20px;
@@ -534,9 +535,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-align: center;
   color: #000;
 }
+
 .flexc {
   display: flex;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
@@ -544,7 +546,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-align: center;
 }
 
+.mathHod {
+  padding-top: 20px;
+}
+
 .imgf {
+
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -656,13 +663,16 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #services {
-  background: #fff;
+  background: #f7f7f7;
+
   background-size: cover;
-  /* padding: 80px 0 60px 0; */
+  padding: 80px 0 60px 0;
 }
-#services .cont{
+
+#services .cont {
   text-align: center;
 }
+
 #services .box {
   padding: 50px 20px;
   margin-bottom: 50px;
@@ -740,8 +750,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 
   line-height: 24px;
 }
+
 .collapsible {
-  background-color: #777;
+  background-color: #323232;
   color: white;
   cursor: pointer;
   padding: 18px;
@@ -749,16 +760,19 @@ body.mobile-nav-active #mobile-nav-toggle {
   border: none;
   text-align: left;
   outline: none;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 800;
 }
- .content p,b{
-  font-size: 25px !important;
+
+.content p,
+b {
+  font-size: 20px !important;
   text-align: justify;
 
 }
 
-.active, .collapsible:hover {
+.active,
+.collapsible:hover {
   background-color: #555;
 }
 
@@ -775,18 +789,22 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .content {
-  padding: 0 18px;
+  padding: 0px 20px;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
 }
 
+.content h4 {
+  font-size: 17px;
+}
+
 /* Result Section
 --------------------------------*/
 
 #results {
-  background: #fff;
+  background: #f7f7f7;
   padding: 40px 0 60px 0;
 }
 
@@ -834,7 +852,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 18px;
   margin: 0 2px;
 }
-#results{
+
+#results {
   background: #fff;
   background-size: cover;
   padding: 40px 0 60px 0;
@@ -1102,7 +1121,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 18px;
   margin: 0 2px;
 }
-#team{
+
+#team {
   background: #fff;
   background-size: cover;
   padding: 80px 0 60px 0;
@@ -1335,10 +1355,11 @@ body.mobile-nav-active #mobile-nav-toggle {
     justify-content: flex-end;
   }
 }
-iframe{
 
-  width:600px;
-    height:450px;
+iframe {
+
+  width: 600px;
+  height: 450px;
 
 }
 
@@ -1390,10 +1411,7 @@ iframe{
     width: 80vw;
   }
 
-  #event_img {
-    max-width: 80vw;
-    max-height: 80vh;
-  }
+
 
   #nav-menu-container {
     display: none;
@@ -1407,23 +1425,28 @@ iframe{
     padding-top: 15px;
   }
 }
-@media screen and (max-width: 480px) {
-.imgallery{
-  width:320px;
-  height:250px;
-}
-.flexc{
-  justify-content: center;
-}
-iframe{
-  
-  width:320px;
-    height:250px;
-  margin-bottom: 100px;
-}
-.content p,b{
-  font-size: 17px !important;
-  text-align: justify;
 
-}
+@media screen and (max-width: 480px) {
+  .imgallery {
+    width: 320px;
+    height: 250px;
+  }
+
+  .flexc {
+    justify-content: center;
+  }
+
+  iframe {
+
+    width: 320px;
+    height: 250px;
+    margin-bottom: 100px;
+  }
+
+  .content p,
+  b {
+    font-size: 20px;
+    text-align: justify;
+
+  }
 }
