--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,15 @@ a {
 }
 
 #right_event {
+  padding-top: 12vh;
   width: 40vw;
 }
 
 #event_img {
-  width: 100%;
-  height: 100%
+  max-width: 100vw;
+  max-height: 100vh;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 @media(max-width:990px) {
@@ -126,6 +129,7 @@ h6 {
 #header {
   padding: 30px 0;
   height: 92px;
+  /* background-color: #fff; */
   position: fixed;
   left: 0;
   top: 0;
@@ -145,6 +149,7 @@ h6 {
   line-height: 1;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
+  color: #000;
   letter-spacing: 3px;
   text-transform: uppercase;
 }
@@ -160,7 +165,8 @@ h6 {
 }
 
 #header.header-fixed {
-  background: rgb(128, 128, 128);
+  background-color: #fff;
+  background: #263159;
   padding: 20px 0;
   height: 72px;
   transition: all 0.5s;
@@ -344,6 +350,7 @@ h6 {
   height: 2px;
   bottom: 0;
   left: 0;
+  color: #000;
   background-color: #2dc997;
   visibility: hidden;
   -webkit-transform: scaleX(0);
@@ -510,14 +517,16 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #111;
   text-transform: uppercase;
   text-align: center;
-  font-weight: 700;
+  font-weight: 600;
   margin-bottom: 5px;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .section-header .section-description {
   text-align: center;
   padding-bottom: 40px;
   color: #999;
+
 }
 
 /* About Us Section
@@ -551,7 +560,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .imgf {
-
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -663,10 +671,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #services {
-  background: #f7f7f7;
+  background: #fff;
 
   background-size: cover;
-  padding: 80px 0 60px 0;
+  padding: 80px 0 0px 0;
 }
 
 #services .cont {
@@ -980,7 +988,7 @@ b {
 --------------------------------*/
 
 #portfolio {
-  background: #f7f7f7;
+  background: #fff;
   padding: 80px 0;
 }
 
@@ -1074,7 +1082,7 @@ b {
 --------------------------------*/
 
 #team {
-  background: #fff;
+  background: #f7f7f7;
   padding: 80px 0 60px 0;
 }
 
@@ -1123,17 +1131,18 @@ b {
 }
 
 #team {
-  background: #fff;
+  background: #f7f7f7;
   background-size: cover;
   padding: 80px 0 60px 0;
 }
 
 #team .box {
-  padding: 50px 20px;
+  padding: 20px 40px 20px 40px;
   margin-bottom: 50px;
   text-align: center;
   border: 1px solid #e6e6e6;
-  height: 300px;
+  height: 340px;
+
   position: relative;
   background: #fafafa;
 }
@@ -1202,7 +1211,6 @@ b {
 }
 
 #team .description {
-
   line-height: 24px;
 }
 
@@ -1408,10 +1416,9 @@ iframe {
   }
 
   #right_event {
+
     width: 80vw;
   }
-
-
 
   #nav-menu-container {
     display: none;
