--- a/css/style.css
+++ b/css/style.css
@@ -547,8 +547,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .flexc {
   display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  justify-content: space-around;
+
 }
 
 .textf {
@@ -1083,7 +1083,7 @@ b {
 
 #team {
   background: #f7f7f7;
-  padding: 80px 0 60px 0;
+  padding: 80px 0 0px 0;
 }
 
 #team .member {
@@ -1133,11 +1133,11 @@ b {
 #team {
   background: #f7f7f7;
   background-size: cover;
-  padding: 80px 0 60px 0;
+  padding: 80px 0 0 0;
 }
 
 #team .box {
-  padding: 20px 40px 20px 40px;
+  padding: 20px 20px 20px 20px;
   margin-bottom: 50px;
   text-align: center;
   border: 1px solid #e6e6e6;
