--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ a {
   position: absolute;
   top: .5vw;
   left: 90vw;
+  padding-left: 15px;
+  padding-right: 5px;
+  padding-bottom:8px ;
 }
 
 #left_event {
@@ -28,6 +31,7 @@ a {
   max-height: 100vh;
   padding-top: 20px;
   padding-bottom: 50px;
+  padding-right: 30px;
 }
 
 @media(max-width:990px) {
