--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,15 @@ h6 {
   padding: 0;
 }
 
+.h1max
+ {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  margin: 0 0 20px 0;
+  padding: 0;
+  text-transform: none;
+}
+
 /* Prelaoder */
 
 #preloader {
@@ -229,7 +238,7 @@ h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  text-transform: uppercase;
+  text-transform: none;
   color: #fff;
 }
 
