--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 a {
   color: #03C988;
 }
+
 body {
   background: #fff;
   color: #666666;
@@ -23,7 +24,7 @@ body {
   left: 90vw;
   padding-left: 15px;
   padding-right: 5px;
-  padding-bottom:8px ;
+  padding-bottom: 8px;
 }
 
 #left_event {
@@ -96,8 +97,7 @@ h6 {
   padding: 0;
 }
 
-.h1max
- {
+.h1max {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
